--- a/css/main.css
+++ b/css/main.css
@@ -782,3 +782,18 @@ td.gutter {
   font-style: italic;
   font-size: 16px;
 }
+
+.googleCalendar{
+  position: relative;
+  height: 0;
+  width: 50%;
+  padding-bottom: 50%;
+}
+
+.googleCalendar iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
