--- a/css/main.css
+++ b/css/main.css
@@ -783,33 +783,17 @@ td.gutter {
   font-size: 16px;
 }
 
-.googleCalendar{
-  position: relative;
-  height: 0;
-  width: 100%;
-  padding-bottom: 90%;
-}
-
-.googleCalendar iframe{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
- <style>
- @media (max-width: 550px) {
-     .big-container {
-         display: none;
-     }
- }
- @media (min-width: 550px) {
+ @media (max-width: 549px) {
      .small-container {
          display: none;
      }
  }
- /* Responsive iFrame */
+ @media (min-width: 550px) {
+     .big-container {
+         display: none;
+     }
+ }
+ /* Responsive iFrame
  .responsive-iframe-container {
      position: relative;
      padding-bottom: 80%;
@@ -817,13 +801,12 @@ td.gutter {
      height: 0;
      overflow: hidden;
  }
- .responsive-iframe-container iframe,   
- .vresponsive-iframe-container object,  
+ .responsive-iframe-container iframe,
+ .vresponsive-iframe-container object,
  .vresponsive-iframe-container embed {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
- }
- </style>
+ } */
