--- a/css/main.css
+++ b/css/main.css
@@ -783,30 +783,6 @@ td.gutter {
   font-size: 16px;
 }
 
- @media (max-width: 549px) {
-     .small-container {
-         display: none;
-     }
- }
- @media (min-width: 550px) {
-     .big-container {
-         display: none;
-     }
- }
- /* Responsive iFrame
- .responsive-iframe-container {
-     position: relative;
-     padding-bottom: 80%;
-     padding-top: 0px;
-     height: 0;
-     overflow: hidden;
- }
- .responsive-iframe-container iframe,
- .vresponsive-iframe-container object,
- .vresponsive-iframe-container embed {
-     position: absolute;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
- } */
+.fc h2 {
+   font-size: 24px;
+}
