Unselectable title and subtitle

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,16 +25,16 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="{{ include.type }}-heading">
-          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+          <h1>{% if page.title %}<p class="wrapTxt">{{ page.title }}<span class="mask"></span></p>{% else %}<br/>{% endif %}</h1>
 		  {% if page.subtitle %}
 		    {% if include.type == "page" %}
             <hr class="small">
-            <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+            <span class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></span>
 			{% else %}
-			<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
+			<h2 class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></h2>
 			{% endif %}
 		  {% endif %}
-		  
+
 		  {% if include.type == "post" %}
 		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
 		  {% endif %}
@@ -50,16 +50,16 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="{{ include.type }}-heading">
-          <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
+          <h1>{% if page.title %}<span class="wrapTxt">{{ page.title }}<span class="mask"></span></span></{% else %}<br/>{% endif %}</h1>
 		  {% if page.subtitle %}
 		    {% if include.type == "page" %}
             <hr class="small">
-            <span class="{{ include.type }}-subheading">{{ page.subtitle }}</span>
+            <span class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></span>
 			{% else %}
-			<h2 class="{{ include.type }}-subheading">{{ page.subtitle }}</h2>
+			<h2 class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></h2>
 			{% endif %}
 		  {% endif %}
-		  
+
 		  {% if include.type == "post" %}
 		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
 		  {% endif %}
