--- a/css/main.css
+++ b/css/main.css
@@ -798,3 +798,15 @@ td.gutter {
   background-color:#fcf8e3 !important;
   color: gray !important;
 }
+
+.wrapTxt {
+  position: relative;
+}
+.wrapTxt .mask {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
