--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,13 +25,13 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="{{ include.type }}-heading">
-          <h1>{% if page.title %}<p class="wrapTxt">{{ page.title }}<span class="mask"></span></p>{% else %}<br/>{% endif %}</h1>
+          <h1>{% if page.title %}<span class="wrapTxt">{{ page.title }}<span class="mask"></span></span>{% else %}<br/>{% endif %}</h1>
 		  {% if page.subtitle %}
 		    {% if include.type == "page" %}
             <hr class="small">
-            <span class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></span>
+            <span class="{{ include.type }}-subheading"><span class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></span></span>
 			{% else %}
-			<h2 class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></h2>
+			<h2 class="{{ include.type }}-subheading"><span class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></span></h2>
 			{% endif %}
 		  {% endif %}
 
@@ -54,9 +54,9 @@
 		  {% if page.subtitle %}
 		    {% if include.type == "page" %}
             <hr class="small">
-            <span class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></span>
+            <span class="{{ include.type }}-subheading"><span class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></span></span>
 			{% else %}
-			<h2 class="{{ include.type }}-subheading"><p class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></p></h2>
+			<h2 class="{{ include.type }}-subheading"><span class="wrapTxt">{{ page.subtitle }}<span class="mask"></span></span></h2>
 			{% endif %}
 		  {% endif %}
 
