--- a/css/main.css
+++ b/css/main.css
@@ -810,3 +810,10 @@ td.gutter {
   right: 0;
   bottom: 0;
 }
+
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
