Update about me subtitle

--- a/css/main.css
+++ b/css/main.css
@@ -838,3 +838,6 @@ td.gutter {
    text-align: center;
    float: none;
 }
+.cleantxt {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
