--- a/css/main.css
+++ b/css/main.css
@@ -317,14 +317,8 @@ footer .theme-by {
 /* --- Post preview --- */
 
 .post-preview {
-  padding: 20px 0;
+  padding: 0 0;
   border-bottom: 1px solid #eee;
-}
-
-@media only screen and (min-width: 768px) {
-  .post-preview {
-    padding: 35px 0;
-  }
 }
 
 .post-preview:last-child {
@@ -788,28 +782,49 @@ td.gutter {
 }
 
 /* New content */
- @media (max-width: 549px) {
-    .fc h2 {
+@media (max-width: 399px) {
+  .intro-header .page-heading h1 {
+    font-size: 30px;
+  }
+  .intro-header .page-heading .page-subheading {
+    font-size: 17px;
+  }
+  .fc h2 {
+    font-size: 12px;
+  }
+}
+@media (max-width: 349px) {
+  .btn {
+    font-size: x-small;
+  }
+}
+@media (max-width: 399px) and (min-width: 350px) {
+  .btn {
+    font-size: small;
+  }
+}
+@media (max-width: 599px) and (min-width: 400px)  {
+  .btn {
+    font-size: medium;
+  }
+  .intro-header .page-heading h1 {
+    font-size: 40px;
+  }
+  .intro-header .page-heading .page-subheading {
+    font-size: 22px;
+  }
+  .fc h2 {
     font-size: 16px;
-    }
-    div.rtext {
-    font-size: medium;
-    }
-    .btn {
-    font-size: medium;
-    }
- }
- @media (min-width: 550px) {
-    .fc h2 {
+  }
+}
+@media (min-width: 600px) {
+  .fc h2 {
     font-size: 32px;
-    }
-    div.rtext {
-    font-size: x-large;
-    }
-    .btn {
-    font-size: large;
-    }
- }
+  }
+  .btn {
+    font-size: larger;
+  }
+}
 .fc-today {
   background-color:#fcf8e3 !important;
   color: gray !important;
@@ -840,4 +855,38 @@ td.gutter {
 }
 .cleantxt {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+/* remove rounding from cards, buttons and inputs */
+.btn { 
+  border-radius: 20;
+}
+.button-row {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  /* position: fixed; */
+  margin-top: -20px;
+}
+.button-row ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.button-row ul li {
+  display: block;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 33%;
+  text-align: center;
+}
+.button-row ul li a {
+  display: block;
+  margin: 0 0 0 0px;
+  padding: 5px 10px;
+  text-decoration: none;
+  line-height: 3em;
 }
